[gd_scene load_steps=2 format=3 uid="uid://y0acqx4a0eom"]

[ext_resource type="Script" uid="uid://ckkyijmjqxpqp" path="res://scenes/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pong ...seriously?"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="DifficultySelection" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
selected = 1
item_count = 3
popup/item_0/text = "Difficulty: Easy"
popup/item_0/id = 0
popup/item_1/text = "Difficulty: Medium"
popup/item_1/id = 1
popup/item_2/text = "Difficulty: Hard"
popup/item_2/id = 2

[node name="MaxScoreSelection" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Play to 3"
popup/item_0/id = 0
popup/item_1/text = "Play to 5"
popup/item_1/id = 1
popup/item_2/text = "Play to 10"
popup/item_2/id = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 1.0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
